[package]
name = "pinecil2mqtt"
version = "0.1.0"
description = "A simple tool to connect a Pinecil V2 soldering iron to an MQTT broker"
authors = ["Artem Hluvchynskyi <excieve@gmail.com>"]
license-file = "LICENSE"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.11"
env_logger = "0.11"
log = "0.4"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
serde = "1.0"
bincode = "1.3"
rumqttc = "0.24"
serde_json = "1.0"
toml = "0.8"
chrono = "0.4"
uuid = "1.8"
clap = { version = "4.5", features = ["derive"] }
